WOW-28185 minibag message alignment fix

--- a/src/components/belk-header/style/default.scss
+++ b/src/components/belk-header/style/default.scss
@@ -717,5 +717,6 @@ html.is-user {
   }
   .registered {
     display: flex !important;
+    flex-direction: column;
   }
 }
